# pubrecsearch

./: .env.example  .gitignore  CLAUDE.md  README.md  implementation_plan.md  plan.md  pyproject.toml  scraping_implementation_plan.md
db/: schema.sql
docker/: README.md  docker-compose.yml
docs/: api.md  bootstrap.md  data-sources.md  database.md  operations.md  overview.md  pipeline.md
scripts/bootstrap/: cms_bootstrap.py  doj_bootstrap.py  edgar_bootstrap.py  epa_bootstrap.py  fec_bootstrap.py  irs990_bootstrap.py  lda_bootstrap.py  sam_exclusions_import.py  usaspending_bootstrap.py
src/pubrecsearch/: __init__.py  base_scraper.py  cli.py  config.py  db.py  http_client.py  models.py  monitoring.py  normalize.py  r2.py  runner.py
src/pubrecsearch/api/: __init__.py  main.py
src/pubrecsearch/scrapers/: __init__.py  atf_ffl.py  cms_open_payments.py  doj_press.py  epa_echo.py  fara.py  fda_debarment.py  fec_contributions.py  irs_990.py  lda.py  ofac_sdn.py  oig_exclusions.py  sam_exclusions.py  sec_edgar.py  usaspending.py
tests/: test_normalize.py
